# C-Deep-Opengl

./: .gitignore  CMakeLists.txt  README.md  vertex.glsl
src/: main.c
src/components/: shader.c  shader.h  simpleshader.c  simpleshader.h  window.c  window.h
src/lighting/: lcfragment.glsl  lfragment.glsl  lightmain.c  lvertex.glsl
